--- a/src/App.css
+++ b/src/App.css
@@ -2,37 +2,39 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+table {
+  text-align: center;
+  border: medium solid #09d119;
+  border-collapse: collapse;
+  width: 50%;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+th{
+  font-family: monospace;
+  border: thin solid #0fe444;
+  width: 50%;
+  padding: 5px;
+  background-color: #d460d8;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+td{
+  font-family: sans-serif;
+  border: thin solid #11e90a;
+  width: 50%;
+  padding: 1px;
+  text-align: center;
+  background-color: #fff;
 }
-
-.App-link {
-  color: #61dafb;
+caption{
+  font-family: sans-serif;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+form{
+ display: flex;
+ justify-content: center;
+ text-align: center;
+ margin: 15px;
+}
+ul{
+  list-style: none;
+}
+li{
+  padding: 5px;
 }
